# cmake-setup

./: LICENSE  README.md  deploy  deploy.cmake  deploy.cmd
baseline/: .gitignore  CMakeLists.txt
baseline/cmake/: buildopts.cmake  checks.cmake  compat.cmake  general.cmake  pre.cmake
baseline/cmake/scripts/: CMakeLists-src-exe.txt.in  CMakeLists-src-lib.txt.in  CMakeLists-tests-exe.txt.in  CMakeLists-tests-lib.txt.in  add_target.cmake
